--- a/public/static/css/styles.css
+++ b/public/static/css/styles.css
@@ -15,3 +15,17 @@ body{
 	width: 100%;
 
 }
+.sidebar ul li a.active {
+    background-color: #0a0a0ae8;
+}
+.nav>li>a {
+	color: #fff;
+    position: relative;
+    display: block;
+    padding: 21px 15px;
+}
+
+#wrapper{
+	background-color: #222;
+}
+
